# SparseSolv

./: CMakeLists.txt
.doctrees/: environment.pickle
SparseSolv/: CMakeLists.txt  SparseMatBuilderTMPL.hpp
SparseSolvPy/: CMakeLists.txt
examples/VoxelFEM/: CMakeLists.txt
tests/: CMakeLists.txt  SRLfemTest.cpp
